--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,85 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+
+html {
+  box-sizing: border-box;
+  font-size: 175%;
+  font-weight: 300;
+  line-height: 1.3;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+/* Responsive Images */
+
+embed,
+iframe,
+img,
+object,
+video {
+  max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+p,
+pre,
+blockquote,
+figure,
+hr {
+  margin: 0;
+  padding-right: 0;
+  padding-left: 0;
+}
+
+a {
+  text-decoration: none;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+/* Removes all decimals and discs from lists */
+
+ol,
+ul {
+  list-style: none;
+}
+
+input,
+textarea,
+button {
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  outline: none;
+  appearance: none;
+  text-align: left;
+
+  &:hover,
+  &:active,
+  &focus {
+    outline: none;
+  }
+}
