Fix Multiple decimal points and maximum length issue
1. Disallow multiple decimal points in same number
2. Allow maximum of 13 digits
3. Disable operator buttons on click

--- a/src/app/keys/keys.component.html
+++ b/src/app/keys/keys.component.html
@@ -3,14 +3,13 @@
     *ngFor="let key of operators"
     class="key_operator"
     (click)="operatorKeyPress(key)"
-    [ngClass]="{'is-depressed': isDepressedClass}"
+    [disabled]="isDepressed"
   >
     {{key}}
   </button>
   <button
     *ngFor="let key of numbers"
     (click)="keyPress(key)"
-
   >
     {{key}}
   </button>
