--- a/src/app/keys/keys.component.scss
+++ b/src/app/keys/keys.component.scss
@@ -12,7 +12,8 @@
   }
 
   &>*:active::before,
-  &>.is-depressed::before {
+
+  &:disabled {
     background-color: rgba(0, 0, 0, 0.2);
     bottom: 0;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
